[gd_scene load_steps=6 format=3 uid="uid://dsss2dxqk52e3"]

[ext_resource type="Script" uid="uid://8i2xmou4u8vn" path="res://scripts/menu.gd" id="1_24utw"]
[ext_resource type="FontFile" uid="uid://bfy3mqhb77x55" path="res://font/at01.ttf" id="2_lr5oh"]

[sub_resource type="LabelSettings" id="LabelSettings_xn534"]
font_size = 60
font_color = Color(0.99558, 0.99558, 0.99558, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g8m5q"]
font = ExtResource("2_lr5oh")
font_size = 42

[sub_resource type="LabelSettings" id="LabelSettings_gtqpr"]
font = ExtResource("2_lr5oh")
font_size = 40

[node name="screen_finished" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_24utw")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 576.0
offset_bottom = 416.0
color = Color(0.368627, 0.596078, 0.796078, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 55.0
offset_right = 449.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("2_lr5oh")
text = "Obrigado por jogar!!"
label_settings = SubResource("LabelSettings_xn534")
horizontal_alignment = 1

[node name="Devs" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="title_container" type="Label" parent="Devs"]
layout_mode = 2
text = "Feito por:"
label_settings = SubResource("LabelSettings_g8m5q")

[node name="alyson_label" type="Label" parent="Devs"]
layout_mode = 2
text = "Alyson G. da Silva - 172210199"
label_settings = SubResource("LabelSettings_gtqpr")

[node name="diego_label" type="Label" parent="Devs"]
layout_mode = 2
text = "Diego"
label_settings = SubResource("LabelSettings_gtqpr")

[node name="edicarlos_label" type="Label" parent="Devs"]
layout_mode = 2
text = "Edicarlos"
label_settings = SubResource("LabelSettings_gtqpr")

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 330.0
offset_right = 424.0
offset_bottom = 370.0

[node name="menu_button" type="Button" parent="Buttons" groups=["Buttons"]]
layout_mode = 2
text = "Menu Principal
"

[node name="playAgain_button" type="Button" parent="Buttons" groups=["Buttons"]]
layout_mode = 2
text = "Jogar novamente
"
